Fix UI layout issue which cause author-name overflow in packageDetails.

--- a/front-end/src/app/app.component.css
+++ b/front-end/src/app/app.component.css
@@ -67,4 +67,6 @@ mat-drawer-container {
 
 mat-drawer-content {
     /* padding: 5px; */
+    padding-right: 10px;
+    padding-left: 10px;
 }
